2012-04-03  Charlie Zender  <zender@uci.edu>

	* Add --bfr_sz_hnt option and nco__open() to ncks

2012-03-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.0 release procedure:
 	Changes since nco-4_1_0: ncra -y ttl, %i fmt, ncwa NaN
	cd ~/nco;cvs tag -d nco-4_2_0;cvs tag -d nco-4_2_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.0 release"
	cvs tag -c nco-4_2_0;cvs tag -c nco-4_2_0-1

	* ncks now prints variables of type NC_INT with %i instead of %li
	formatting. This fixes TODO nco1040.

	* Fix fundamental mistake in use of memset() in	nco_set_long()
	Buggy method tried to fill tally array with ones quickly
	Revert to slower but obviously correct array deferencing to fill tally
	Hard to believe this bug did not cause more errors
	This fixes TODO nco1039. Thanks to Ken5746 for reporting this.

	* Modify and test NC_FLOAT portion of nco_var_avg() for	NaN-compatibility
	Verify that ncwa will work with missing value = NaN with this algorithm

	* Clean-up nco_var_avg.c to prepare for NaN-handling

2012-03-29  Charlie Zender  <zender@uci.edu>

	* NCO 4.1.0 release procedure:
 	Changes since nco-4_0_9: sorts/maps, MD5, chmod, NaNs, MM3
	cd ~/nco;cvs tag -d nco-4_1_0;cvs tag -d nco-4_1_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.1.0 release"
	cvs tag -c nco-4_1_0;cvs tag -c nco-4_1_0-1

2012-03-23  Charlie Zender  <zender@uci.edu>

	* Add nclist shell alias/function examples to manual

2012-03-21  Charlie Zender  <zender@uci.edu>

	* Clean-up nco_msa.c

	* Place MM3 stubs in ncecat

	* nco_use_mm3_patchset() returns True for MM3->MM4 copies (i.e., case 3)

	* Rename LBF-patchset to MM3-patchset (Multi-record Multi-variable netCDF3 files)

2012-03-13  Charlie Zender  <zender@uci.edu>

	* Verified MM3-workaround appears to work
	Subsetting is now close	to raw /bin/cp speed on NCAR GLADE filesystem
	/glade/home/zender/bin/LINUXAMD64/ncks -O -D 3 -x -v TH ~/gary.nc ~/out3_mrg_4.1.0.nc
	/glade/home/zender/bin/AIX/ncks -O -D 3 -x -v TH ~/gary.nc ~/out3_blf_4.1.0.nc
